--- a/systemd-notify.desktop
+++ b/systemd-notify.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
 Version=1.0
-Name=Pynotify System
+Name=Pynotify3 System
 Type=Application
-Exec=/usr/local/bin/systemd-notify.py
+Exec=/usr/local/bin/systemd-notify3.py
