--- a/systemd-notify.desktop
+++ b/systemd-notify.desktop
@@ -2,4 +2,4 @@
 Version=1.0
 Name=Pynotify System
 Type=Application
-Exec=/usr/local/bin/systemd-notify.py 
+Exec=/usr/local/bin/systemd-notify3.py True 5 iptables.service rc-local.service polkit.service autovt@tty2.service
