--- a/systemd-notify.desktop
+++ b/systemd-notify.desktop
@@ -2,4 +2,4 @@
 Version=1.0
 Name=Pynotify System
 Type=Application
-Exec=/usr/local/bin/systemd-notify3.py True 30 iptables.service rc-local.service polkit.service systemd-logind.service systemd-networkd.service autovt@tty2.service False 1000 None.service True 30 iptables.service systemd-networkd.service rc-local.service polkit.service autovt@tty.service systemd-logind.service
+Exec=/usr/local/bin/systemd-notify.py
