modified systemd-notify.py and added useful comments in .conf

--- a/systemd-desktop-notifications.conf
+++ b/systemd-desktop-notifications.conf
@@ -1,7 +1,9 @@
 [Services]
 #whether to start notifying on services
+#either True or False
 start = True
-#what should the interval between the notifications be
+#what should the interval between the notifications be (in minutes)
 interval = 30
 #which services to notify upon
+#takes a comma separated list (you should ommit .service suffix)
 services = iptables,rc-local,polkit
