updated .conf and v3 file

--- a/systemd-desktop-notifications.conf
+++ b/systemd-desktop-notifications.conf
@@ -1,7 +1,8 @@
 [Services]
 #whether to start notifying on services
+#either True or False
 start = True
-#what should the interval between the notifications be
+#what should the interval between the notifications be (in minutes)?
 interval = 30
-#which services to notify upon
+#which services to notify upon(you should ommit .service suffix)
 services = iptables,rc-local,polkit
