--- a/systemd-denotify.conf
+++ b/systemd-denotify.conf
@@ -1,9 +1,23 @@
-[Services]
-#whether to start notifying on services
+[Logins]
+#whether to start notifying on user logins
+#Takes a single boolean value
 #either True or False
 start = True
-#what should the interval between the notifications be (in minutes)
+
+[Journal]
+#whether to start notifying on failed services
+#Takes a single boolean value
+#either True or False
+start = True
+
+[Services]
+#whether to start notifying on services
+#Takes a single boolean value
+#either True or False
+start = True
+#what should the interval between the notifications be (in minutes)?
+#takes a single integer value
 interval = 30
 #which services to notify upon
-#takes a comma separated list (you should ommit .service suffix)
+#takes a comma separated list (you should ommit the .service part) or a single value (eg systemd-journald)
 services = iptables,rc-local,polkit
