updated conf to reflect filenotifier class

--- a/systemd-denotify.conf
+++ b/systemd-denotify.conf
@@ -13,6 +13,12 @@ start = True
 #either True or False
 start = True
 
+[Files]
+#whether to start notifying upon file alteration
+#Takes a single boolean value
+##either True or False
+start= True
+
 [Services]
 #whether to start notifying on services
 #Takes a single boolean value
