--- a/systemd-denotify.conf
+++ b/systemd-denotify.conf
@@ -1,5 +1,6 @@
-#This is systemd-denotify configuration file
-#A desktop app that provides notifications for user logins,failed services and optionally the status of selected services
+#This is the configuration file for systemd-denotify
+#A desktop app that provides notifications for user logins,
+#failed services and optionally the status of selected services
 #
 [Logins]
 #whether to start notifying on user logins
