updated .conf and v2

--- a/systemd-denotify.conf
+++ b/systemd-denotify.conf
@@ -18,6 +18,8 @@ start = True
 #Takes a single boolean value
 ##either True or False
 start= True
+##Directories to watch (recursively)
+directories = /etc/systemd/,/usr/lib/systemd/
 
 [Services]
 #whether to start notifying on services
