--- a/systemd-denotify/conf/systemd-denotify.conf
+++ b/systemd-denotify/conf/systemd-denotify.conf
@@ -1,5 +1,6 @@
-#This is systemd-denotify configuration file
-#A desktop app that provides notifications for user logins,failed services and optionally the status of selected services
+#This is the configuration file for systemd-denotify
+#A desktop app that provides notifications for user logins
+#failed services, the status of selected services and monitors files.
 #
 [Logins]
 #whether to start notifying on user logins
@@ -8,10 +9,12 @@
 start = True
 
 [Journal]
-#whether to start notifying on failed services
+#Whether to start notifying on failed services
+#Note that to start reading the journal for failed services your user should be a member of the systemd-journald group
+#If you installed this app from pypi or rpm you should probably do it yourself.
 #Takes a single boolean value
 #either True or False
-start = True
+start = False
 
 [Files]
 #whether to start notifying upon file alteration
