--- a/systemd-denotify/conf/systemd-denotify.conf
+++ b/systemd-denotify/conf/systemd-denotify.conf
@@ -34,4 +34,4 @@ start = True
 interval = 30
 #which services to notify upon
 #takes a comma separated list (you should ommit the .service part) or a single value (eg systemd-journald)
-services = iptables,rc-local,polkit
+services = systemd-logind,systemd-journald
