--- a/systemd-denotify/conf/systemd-denotify.conf
+++ b/systemd-denotify/conf/systemd-denotify.conf
@@ -8,7 +8,7 @@
 #either True or False
 start = True
 
-[Journal]
+[FailedServices]
 #Whether to start notifying on failed services
 #Note that to start reading the journal for failed services your user should be a member of the systemd-journald group
 #If you installed this app from pypi or rpm you should probably do it yourself.
@@ -24,7 +24,7 @@ start= True
 ##Directories to watch (recursively)
 directories = /etc/systemd/,/usr/lib/systemd/
 
-[Services]
+[ServicesStatus]
 #whether to start notifying on services
 #Takes a single boolean value
 #either True or False
