altered .conf and README.md with instructions for fedora

--- a/systemd-denotify/conf/systemd-denotify.conf
+++ b/systemd-denotify/conf/systemd-denotify.conf
@@ -10,8 +10,10 @@ start = True
 
 [FailedServices]
 #Whether to start notifying on failed services
-#Note that to start reading the journal for failed services your user should be a member of the systemd-journald group
-#If you installed this app from pypi or rpm you should probably do it yourself.
+#Note that to start reading the journal for failed services your desktop user should be a member of the systemd-journald group.
+#If you are in archlinux and installed this app from pacman you should probably do it yourself.
+#If you are in fedora and installed this app from yum you are probably already a member of the systemd-journal group  but check it first.
+#
 #Takes a single boolean value
 #either True or False
 start = False
