modded .conf and added ConfigReader class in systemd-denotify.py

--- a/systemd-denotify/conf/systemd-denotify.conf
+++ b/systemd-denotify/conf/systemd-denotify.conf
@@ -8,6 +8,11 @@
 #either True or False
 start = True
 
+#whether to send an email upon user login
+#Note that if you set this to True you have to fill the EMAIL_NOTIFICATIONS and beneath sections
+#Takes a single boolean value (True/False)
+send_mail_notification = True
+
 [FailedServices]
 #Whether to start notifying on failed services
 #Note that to start reading the journal for failed services your desktop user should be a member of the systemd-journald group.
@@ -17,6 +22,10 @@ start = True
 #Takes a single boolean value
 #either True or False
 start = False
+#whether to send an email upon service failure
+#Note that if you set this to True you have to fill the EMAIL_NOTIFICATIONS and beneath sections
+#Takes a single boolean value (True/False)
+send_mail_notification = True
 
 [Files]
 #whether to start notifying upon file alteration
@@ -25,6 +34,10 @@ start = False
 start= True
 ##Directories to watch (recursively)
 directories = /etc/systemd/,/usr/lib/systemd/
+#whether to send an email upon file alteration
+#Note that if you set this to True you have to fill the EMAIL_NOTIFICATIONS and beneath sections
+#Takes a single boolean value (True/False)
+send_mail_notification = True
 
 [ServicesStatus]
 #whether to start notifying on services
@@ -37,3 +50,105 @@ interval = 30
 #which services to notify upon
 #takes a comma separated list (you should ommit the .service part) or a single value (eg systemd-journald)
 services = systemd-logind,systemd-journald
+#whether to send an email every specified interval
+#Note that if you set this to True you have to fill the EMAIL_NOTIFICATIONS and beneath sections
+#Takes a single boolean value (True/False)
+send_mail_notification = False
+
+
+####################
+##  Mail Details  ##
+####################
+[EMAIL_NOTIFICATIONS]
+# what should  the default subject be? eg: service failure in domain.example.con
+#subject=systemd-denotify mail alert on example.com
+subject=mailify
+# who is sending this? eg: admin@domain.example.com
+#mail_from=someone@example.com
+mail_from=
+#to whom it is send
+#mail_to=another@example.com
+mail_to=
+
+
+#####################
+# Mail auth details #
+#####################
+[AUTH]
+#whether to authenticate against the mail server
+#Takes a single value (True/False)
+#active=True
+active=False
+#the username eg root or root@domain.com. The latter depends on the mail servers configuration and whether it appends the domain part(realm) to the user
+#auth_user=root
+auth_user=
+#the password for this user
+auth_password=
+
+############################
+# Mail smtp server details #
+############################
+[SMTP]
+#whether to start a simple unencrypted smtp session
+#Takes a single value (True/False)
+active=True
+# The host to connect to eg host=domain.example.com
+# if nothing specified defaults to localhost
+host=localhost
+# port to connect to eg port=25
+#Takes a single value: the port number
+#It must be set it is a mandatory field never leave it blank
+port=25
+
+####################
+# Mail ssl details #
+####################
+[SMTPS]
+#whether to start an ssl smtp session
+#Takes a single boolean value (True/False)
+#active=False
+active=False
+# The host to connect to eg host=domain.example.com
+# if nothing specified defaults to localhost
+host=localhost
+# port to connect to eg port=465
+#Takes a single value: the port number
+#It must be set it is a mandatory field never leave it blank
+port=465
+#The certificate file for the clients
+#if you have a certificate  give the absolute path here
+#NOTE: if your mails are not delivered and you get an SSLError in journal from systemd-mailify you have to adjust(relax) the file permissions
+#cert_file=/path/to/client/cert.pem
+cert_file=
+#The key file for the clients
+#if you have a key file give the absolute path here
+#NOTE: if your mails are not delivered and you get an SSLError in journal from systemd-mailify you have to adjust(relax) the file permissions
+#key_file=/path/to/client/key.pem
+key_file=
+
+####################
+# Mail tls details #
+####################
+[STARTTLS]
+#whether to start a tls smtp session
+#Takes a single boolean value (True/False)
+#active=True
+active=False
+# The host to connect to eg host=domain.example.com
+# if nothing specified defaults to localhost
+#host=mail.example.com
+host=
+# port to connect to eg port=587
+#Takes a single value: the port number
+#It must be set it is a mandatory field never leave it blank
+port=587
+#The certificate file for the clients
+#if you have a certificate  give the absolute path here
+#NOTE: if your mails are not delivered and you get an SSLError in journal from systemd-mailify you have to adjust(relax) the file permissions
+#cert_file=/path/to/client/cert.pem
+cert_file=
+#The key file for the clients
+#if you have a key file give the absolute path here
+#NOTE: if your mails are not delivered and you get an SSLError in journal from systemd-mailify you have to adjust(relax) the file permissions
+#key_file=/path/to/client/key.pem
+key_file=
