--- a/systemd-denotify/conf/systemd-denotify.conf
+++ b/systemd-denotify/conf/systemd-denotify.conf
@@ -2,16 +2,15 @@
 #A desktop app that provides notifications for user logins
 #failed services, the status of selected services and monitors files.
 #
+#
+################################
+# Desktop Notification Details #
+################################
 [Logins]
 #whether to start notifying on user logins
 #Takes a single boolean value
 #either True or False
 start = True
-
-#whether to send an email upon user login
-#Note that if you set this to True you have to fill the EMAIL_NOTIFICATIONS and beneath sections
-#Takes a single boolean value (True/False)
-send_mail_notification = True
 
 [FailedServices]
 #Whether to start notifying on failed services
@@ -22,10 +21,6 @@ send_mail_notification = True
 #Takes a single boolean value
 #either True or False
 start = False
-#whether to send an email upon service failure
-#Note that if you set this to True you have to fill the EMAIL_NOTIFICATIONS and beneath sections
-#Takes a single boolean value (True/False)
-send_mail_notification = True
 
 [Files]
 #whether to start notifying upon file alteration
@@ -34,10 +29,6 @@ send_mail_notification = True
 start= True
 ##Directories to watch (recursively)
 directories = /etc/systemd/,/usr/lib/systemd/
-#whether to send an email upon file alteration
-#Note that if you set this to True you have to fill the EMAIL_NOTIFICATIONS and beneath sections
-#Takes a single boolean value (True/False)
-send_mail_notification = True
 
 [ServicesStatus]
 #whether to start notifying on services
@@ -50,16 +41,27 @@ interval = 30
 #which services to notify upon
 #takes a comma separated list (you should ommit the .service part) or a single value (eg systemd-journald)
 services = systemd-logind,systemd-journald
-#whether to send an email every specified interval
-#Note that if you set this to True you have to fill the EMAIL_NOTIFICATIONS and beneath sections
-#Takes a single boolean value (True/False)
-send_mail_notification = False
 
 
 ####################
 ##  Mail Details  ##
 ####################
 [EMAIL_NOTIFICATIONS]
+##
+##
+# Whether to email on user logins
+#Takes a single boolean value (True/False)
+email_on_user_logins = True
+# Whether to email on failed services
+#Takes a single boolean value (True/False)
+email_on_failed_services = True
+# Whether to email upon file alteration
+#Takes a single boolean value (True/False)
+email_on_file_alteration = True
+# Whether to email on services statuses
+#Takes a single boolean value (True/False)
+email_on_services_statuses = False
+
 # what should  the default subject be? eg: service failure in domain.example.con
 #subject=systemd-denotify mail alert on example.com
 subject=mailify
