updates on .conf na d.py

--- a/systemd-denotify/conf/systemd-denotify.conf
+++ b/systemd-denotify/conf/systemd-denotify.conf
@@ -31,7 +31,8 @@ start= True
 directories = /etc/systemd/,/usr/lib/systemd/
 
 [ServicesStatus]
-#whether to start notifying on services
+#whether to start notifying on the status of selected services
+#equivalent to systemctl status systemd-journald
 #Takes a single boolean value
 #either True or False
 start = True
@@ -62,6 +63,8 @@ email_on_file_alteration = True
 #Takes a single boolean value (True/False)
 email_on_services_statuses = False
 
+
+[EMAIL]
 # what should  the default subject be? eg: service failure in domain.example.con
 #subject=systemd-denotify mail alert on example.com
 subject=mailify
