added Mailer calls on all classes except FileNotifier

--- a/systemd-denotify/conf/systemd-denotify.conf
+++ b/systemd-denotify/conf/systemd-denotify.conf
@@ -29,6 +29,11 @@ start = False
 start= True
 ##Directories to watch (recursively)
 directories = /etc/systemd/,/usr/lib/systemd/
+#Events to watch for
+#You can be notified when a file in specified directories gets modified, deleted, written or when its
+#attributes changed
+events = DELETE,WRITE,MODIFY,ATTRIBUTE
+
 
 [ServicesStatus]
 #whether to start notifying on the status of selected services
