updates on .conf

--- a/systemd-denotify/conf/systemd-denotify.conf
+++ b/systemd-denotify/conf/systemd-denotify.conf
@@ -32,7 +32,9 @@ directories = /etc/systemd/,/usr/lib/systemd/
 #Events to watch for
 #You can be notified when a file in specified directories gets modified, deleted, written or when its
 #attributes changed
-events = DELETE,WRITE,MODIFY,ATTRIBUTE
+#takes  a comma separated list of events
+#events = DELETE,WRITE,MODIFY,ATTRIBUTE
+events = DELETE,WRITE,MODIFY
 
 
 [ServicesStatus]
@@ -57,13 +59,13 @@ services = systemd-logind,systemd-journald
 ##
 # Whether to email on user logins
 #Takes a single boolean value (True/False)
-email_on_user_logins = True
+email_on_user_logins = False
 # Whether to email on failed services
 #Takes a single boolean value (True/False)
 email_on_failed_services = True
 # Whether to email upon file alteration
 #Takes a single boolean value (True/False)
-email_on_file_alteration = True
+email_on_file_alteration = False
 # Whether to email on services statuses
 #Takes a single boolean value (True/False)
 email_on_services_statuses = False
@@ -72,7 +74,7 @@ email_on_services_statuses = False
 [EMAIL]
 # what should  the default subject be? eg: service failure in domain.example.con
 #subject=systemd-denotify mail alert on example.com
-subject=mailify
+subject=systemd-denotify email notification
 # who is sending this? eg: admin@domain.example.com
 #mail_from=someone@example.com
 mail_from=
