initial pattern commit

--- a/systemd-denotify/conf/systemd-denotify.conf
+++ b/systemd-denotify/conf/systemd-denotify.conf
@@ -20,6 +20,12 @@ start = True
 # either True or False
 start = False
 
+[JournalPatternMatcher]
+
+start = True
+
+patterns =
+
 [Files]
 # whether to start notifying upon file alteration
 # Takes a single boolean value
