added support for journal pattern match

--- a/systemd-denotify/conf/systemd-denotify.conf
+++ b/systemd-denotify/conf/systemd-denotify.conf
@@ -73,6 +73,9 @@ email_on_file_alteration = False
 #  Whether to email on services statuses
 # Takes a single boolean value (True/False)
 email_on_services_statuses = False
+#  Whether to email on journal pattern match
+# Takes a single boolean value (True/False)
+email_on_journal_pattern_match = False
 
 
 [EMAIL]
