added support for journal pattern match v2

--- a/systemd-denotify/conf/systemd-denotify.conf
+++ b/systemd-denotify/conf/systemd-denotify.conf
@@ -21,10 +21,10 @@ start = True
 start = False
 
 [JournalPatternMatcher]
-
+# whether to start notifying upon a journal phrase
 start = True
-
-patterns =
+# takes  a comma separated list of patterns you want to search for
+patterns = IPT_OUTPUT, IPT_INPUT
 
 [Files]
 # whether to start notifying upon file alteration
