added support for notifying on journal pattern match v8

--- a/systemd-denotify/conf/systemd-denotify.conf
+++ b/systemd-denotify/conf/systemd-denotify.conf
@@ -24,7 +24,7 @@ start = False
 # whether to start notifying upon a journal phrase
 start = True
 # takes  a comma separated list of patterns you want to search for
-patterns = IPT_OUTPUT, IPT_INPUT
+patterns = IPT_OUTPUT,IPT_INPUT
 
 [Files]
 # whether to start notifying upon file alteration
@@ -32,6 +32,7 @@ patterns = IPT_OUTPUT, IPT_INPUT
 # # either True or False
 start= True
 # # Directories to watch (recursively)
+# takes  a comma separated list of dirs
 directories = /etc/systemd/,/usr/lib/systemd/
 # Events to watch for
 # You can be notified when a file in specified directories gets modified, deleted, written or when its
