added support for notifying on journal pattern match

--- a/systemd-denotify/conf/systemd-denotify.conf
+++ b/systemd-denotify/conf/systemd-denotify.conf
@@ -14,7 +14,7 @@ start = True
 
 [FailedServices]
 # Whether to start notifying on failed services
-# Note that to start reading the journal for failed services your desktop user should be a member of the systemd-journald group.
+# Note that to start reading the journal for failed services your desktop user should be a member of the systemd-journal group
 #
 # Takes a single boolean value
 # either True or False
@@ -22,9 +22,13 @@ start = False
 
 [JournalPatternMatcher]
 # whether to start notifying upon a journal phrase
+# Note that to start reading the journal for phrases/patterns  your desktop user should be a member of the systemd-journal group
+# Takes a single boolean value
+# either True or False
 start = True
-# takes  a comma separated list of patterns you want to search for
-patterns = IPT_OUTPUT,IPT_INPUT
+# takes  a comma separated list of patterns or a single value you wish to search for(eg sshd)
+#
+patterns = some pattern,some other pattern, but don't over do it
 
 [Files]
 # whether to start notifying upon file alteration
@@ -32,12 +36,12 @@ patterns = IPT_OUTPUT,IPT_INPUT
 # # either True or False
 start= True
 # # Directories to watch (recursively)
-# takes  a comma separated list of dirs
+# takes  a comma separated list of dirs or a single value (eg /etc)
 directories = /etc/systemd/,/usr/lib/systemd/
 # Events to watch for
 # You can be notified when a file in specified directories gets modified, deleted, written or when its
 # attributes changed
-# takes  a comma separated list of events
+# takes  a comma separated list of events or a single value (eg MODIFY)
 # events = DELETE,WRITE,MODIFY,ATTRIBUTE
 events = DELETE,WRITE,MODIFY
 
