--- a/denotify/conf/systemd-denotify.conf
+++ b/denotify/conf/systemd-denotify.conf
@@ -13,19 +13,24 @@
 start = True
 
 [FailedServices]
-# Whether to start notifying on failed services
-# Note that to start reading the journal for failed services your desktop user should be a member of the systemd-journal group
+# Whether to start notifying on failed services.
+# Note that to start reading the journal for failed services your desktop user should be a member of the systemd-journal group.
+# On some distros (fedora) this is achieved automagically from the installation
+# process as described in README.md while on others(arch) you should take care of it yourself.
 #
 # Takes a single boolean value
 # either True or False
-start = False
+start = True
 
 [JournalPatternMatcher]
-# whether to start notifying upon a journal phrase
-# Note that to start reading the journal for phrases/patterns  your desktop user should be a member of the systemd-journal group
+# whether to start notifying upon journal messages that contain a specific phrase/phrases.
+# Note that to start reading the journal for phrases/patterns  your desktop user should be a member of the systemd-journal group.
+# On some distros (fedora) this is achieved automagically from the installation
+# process as described in README.md while on others(arch) you should take care of it yourself.
+
 # Takes a single boolean value
 # either True or False
-start = True
+start = False
 # takes  a comma separated list of patterns or a single value you wish to search for(eg sshd)
 #
 patterns = some pattern,some other pattern, but don't over do it
@@ -71,7 +76,7 @@ services = systemd-logind,systemd-journald
 email_on_user_logins = False
 #  Whether to email on failed services
 # Takes a single boolean value (True/False)
-email_on_failed_services = True
+email_on_failed_services = False
 #  Whether to email upon file alteration
 # Takes a single boolean value (True/False)
 email_on_file_alteration = False
@@ -87,7 +92,7 @@ email_on_journal_pattern_match = False
 #  what should  the default subject be? eg: service failure in domain.example.con
 # subject=systemd-denotify mail alert on example.com
 subject=systemd-denotify email notification
-#  who is sending this? eg: admin@domain.example.com
+# who is sending this? eg: admin@domain.example.com
 # mail_from=someone@example.com
 mail_from=
 # to whom it is send
