--- a/denotify/conf/systemd-denotify.conf
+++ b/denotify/conf/systemd-denotify.conf
@@ -41,7 +41,8 @@ patterns = some pattern,some other pattern, but don't over do it
 # # either True or False
 start= True
 # # Directories to watch (recursively)
-# takes  a comma separated list of dirs or a single value (eg /etc)
+# takes  a comma separated list of dirs or a single value 
+##Note you shouldn't have empty space or whitespace between commas  (eg /etc/systemd,/usr/lib/systemd)
 directories = /etc/systemd/,/usr/lib/systemd/
 # Events to watch for
 # You can be notified when a file in specified directories gets modified, deleted, written or when its
