added espeak boolean in config and testing code in journalpatternmatcher class

--- a/denotify/conf/systemd-denotify.conf
+++ b/denotify/conf/systemd-denotify.conf
@@ -21,6 +21,8 @@ start = True
 # Takes a single boolean value
 # either True or False
 start = True
+#Whether to start notifying with computer speech
+espeak = True
 
 [JournalPatternMatcher]
 # whether to start notifying upon journal messages that contain a specific phrase/phrases.
@@ -41,7 +43,7 @@ patterns = some pattern,some other pattern, but don't over do it
 # # either True or False
 start= True
 # # Directories to watch (recursively)
-# takes  a comma separated list of dirs or a single value 
+# takes  a comma separated list of dirs or a single value
 ##Note you shouldn't have empty space or whitespace between commas  (eg /etc/systemd,/usr/lib/systemd)
 directories = /etc/systemd/,/usr/lib/systemd/
 # Events to watch for
