--- a/denotify/conf/systemd-denotify.conf
+++ b/denotify/conf/systemd-denotify.conf
@@ -20,10 +20,10 @@ start = True
 
 # Takes a single boolean value
 # either True or False
-start = False
+start = True
 # takes  a comma separated list of patterns or a single value you wish to search for(eg sshd)
 #
-patterns = some pattern,some other pattern, but don't over do it
+patterns = entered failed state
 
 [Files]
 # whether to start notifying upon file alteration
