added exlanatory comments in .conf

--- a/denotify/conf/systemd-denotify.conf
+++ b/denotify/conf/systemd-denotify.conf
@@ -21,8 +21,8 @@ start = True
 # Takes a single boolean value
 # either True or False
 start = True
-# takes  a comma separated list of patterns or a single value you wish to search for(eg sshd)
-#
+# Takes a comma separated list of patterns or a single phrase you wish to search for eg(permission denied, entered failed state)
+# Note that if you want to keep the previous functionality with notifying on failed systemd services you want the pattern below
 patterns = entered failed state
 
 [Files]
