fixed grammar and linguistics in .conf along with indentation issues (a python symptom)

--- a/denotify/conf/systemd-denotify.conf
+++ b/denotify/conf/systemd-denotify.conf
@@ -14,7 +14,7 @@ start = True
 
 [JournalPatternMatcher]
 # whether to start notifying upon journal messages that contain a specific phrase/phrases.
-# Note that to start reading the journal for phrases/patterns  your desktop user should be a member of the systemd-journal group.
+# Note that to start reading the journal for phrases/patterns your desktop user should be a member of the systemd-journal group.
 # On some distros (fedora) this is achieved automagically from the installation
 # process as described in README.md while on others(arch) you should take care of it yourself.
 
@@ -28,12 +28,12 @@ patterns = entered failed state
 [Files]
 # whether to start notifying upon file alteration
 # Takes a single boolean value
-# # either True or False
+## either True or False
 start= True
-# # Directories to watch (recursively)
+# Directories to watch (recursively)
 # takes  a comma separated list of dirs or a single value
-##Note you shouldn't have empty space or whitespace between commas  (eg /etc/systemd,/usr/lib/systemd)
-directories = /etc/systemd/,/usr/lib/systemd/
+##Note you shouldn't have any empty spaces or whitespace between commas  (eg /etc/systemd,/usr/lib/systemd)
+directories = /etc/systemd,/usr/lib/systemd
 # Events to watch for
 # You can be notified when a file in specified directories gets modified, deleted, written or when its
 # attributes changed
@@ -41,27 +41,24 @@ directories = /etc/systemd/,/usr/lib/systemd/
 # events = DELETE,WRITE,MODIFY,ATTRIBUTE
 events = DELETE,WRITE,MODIFY
 
-
 [ServicesStatus]
 # whether to start notifying on the status of selected services
 # equivalent to systemctl status systemd-journald
 # Takes a single boolean value
 # either True or False
 start = True
-# what should the interval between the notifications be (in minutes)?
+# Interval between the notifications (in minutes)
 # takes a single integer value
 interval = 30
 # which services to notify upon
 # takes a comma separated list (you should ommit the .service part) or a single value (eg systemd-journald)
 services = systemd-logind,systemd-journald
 
-
 ##################
 ## Mail Details ##
 ##################
 [EMAIL_NOTIFICATIONS]
-##
-##
+
 #  Whether to email on user logins
 # Takes a single boolean value (True/False)
 email_on_user_logins = False
@@ -78,18 +75,16 @@ email_on_services_statuses = False
 # Takes a single boolean value (True/False)
 email_on_journal_pattern_match = False
 
-
 [EMAIL]
-#  what should  the default subject be? eg: service failure in domain.example.con
+#  Default subject. Eg: service failure in domain.example.con
 # subject=systemd-denotify mail alert on example.com
 subject=systemd-denotify email notification
-# who is sending this? eg: admin@domain.example.com
+# who is sending this (sender)?
 # mail_from=someone@example.com
 mail_from=
-# to whom it is send
+# to whom it is send (recipient)?
 # mail_to=another@example.com
 mail_to=
-
 
 #####################
 # Mail auth details #
@@ -131,7 +126,7 @@ active=False
 #  The host to connect to eg host=domain.example.com
 #  if nothing specified defaults to localhost
 host=localhost
-#  port to connect to eg port=465
+# port to connect to eg port=465
 # Takes a single value: the port number
 # It must be set, it is a mandatory field, never leave it blank.
 port=465
